Thu Feb  4 21:05:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Activated :ascii flag for ASCII-only case conversion
	  (with Kimihito Matsui)

Thu Feb  4 17:38:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (reg_set_source): make source string frozen without
	  copying.

	* re.c (rb_reg_initialize_m): refactor initialization with
	  encoding.

Thu Feb  4 15:35:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fstring_enc_new, rb_fstring_enc_cstr): functions to
	  make fstring with encoding.

Thu Feb  4 14:42:29 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Added Unicode data file SpecialCasing.txt to be additionally
	  downloaded (with Kimihito Matsui)

Thu Feb  4 12:39:08 2016  joker1007  <kakyoin.hierophant@gmail.com>

	* cgi/escape/escape.c: Optimize CGI.escape performance by C ext
	  for ASCII-compatible encodings.  [Fix GH-1238]

Thu Feb  4 11:53:56 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Introduce two variables (UNICODE_DATA_DIR and
	  UNICODE_SRC_DATA_DIR) to eliminate repetitions.

Wed Feb  3 12:13:20 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (str_new_frozen): if the given string is embeddedable
	  but not embedded, embed a new copied string. [Bug #11946]

Wed Feb  3 08:25:38 2016  boshan  <boshan@subsplash.com>

	* ext/openssl/ossl_pkey.c (Init_ossl_pkey): [DOC] Fix typo
	  "encrypted" to "decrypted".  [Fix GH-1235]

Wed Feb  3 08:21:32 2016  Seiei Miyagi  <hanachin@gmail.com>

	* ext/ripper/lib/ripper/lexer.rb (on_heredoc_dedent): Fix
	  Ripper.lex error in dedenting squiggly heredoc.  heredoc tree is
	  also an array of Elem in the outer tree.  [Fix GH-1234]

Wed Feb  3 02:33:39 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_prepare_enc): use already compiled US-ASCII regexp
	  if given string is ASCII only.
	  121.2s to 113.9s on my x86_64-freebsd10.2 Intel Core i5 661

Tue Feb  2 13:02:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>
